--- a/.github/workflows/check-app.yml
+++ b/.github/workflows/check-app.yml
@@ -1,9 +1,12 @@
-name: PR Checks
+name: Application Checks
 on:
   pull_request:
     branches: [main]
+  push:
+    branches: [main]
+
 jobs:
-  lint:
+  app_checks:
     environment: dev
     runs-on: ubuntu-latest
     env:
@@ -12,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: 20
       - uses: actions/cache@v4
         with:
           path: ~/.npm
